@@ -3,6 +3,8 @@ package ar.com.educacionit.dao.impl;
 import java.lang.reflect.ParameterizedType;
 
 import ar.com.educacionit.dao.GenericDao;
+import ar.com.educacionit.dao.Exceptions.DuplicatedException;
+import ar.com.educacionit.dao.Exceptions.GenericException;
 import ar.com.educacionit.domain.Entity;
 
 public class JDBCDaoBase<T extends Entity> implements GenericDao<T> {
@@ -18,13 +20,27 @@ public class JDBCDaoBase<T extends Entity> implements GenericDao<T> {
 	
 }
 
-	public T getOne(Long id) {
+	public T getOne(Long id) throws GenericException{
+		
+		if(id==null) {
+			
+			throw new GenericException ("id no informado");
+		}
+		
+		
+		
 		String sql= "SELECT * FROM " + this.Tabla + " WHERE ID ="+ id;
 		System.out.println("ejecutando sql: "+sql);
 		T entity;
 		try {
-		entity = this.clazz.newInstance();
+	//	entity = this.clazz.newInstance();
+		entity = this.clazz.getDeclaredConstructor().newInstance();
 		entity.setid(id);
+		
+		//tomar los metodos de this.clazz > methodo
+		//para cada method > method.invoke(entity)
+		
+		
 		//clase utilitaria que va a saber como tomar la instancia y como armar
 		//los seteos de los atributos
 		} catch (Exception e) {
@@ -38,7 +54,7 @@ public class JDBCDaoBase<T extends Entity> implements GenericDao<T> {
 		
 	}
 
-	public T save(T entity) {
+	public T save(T entity) throws DuplicatedException {
 		
 		return null;
 	}
